--- a/style.css
+++ b/style.css
@@ -161,7 +161,8 @@ body {
     .nav-home {
         margin: 5px;
         font-size: 1rem;
-        width: 60px;
+        width: 70px;
+        justify-content: center;
     }
     .nav-search {
         height: 35px;
