--- a/style.css
+++ b/style.css
@@ -146,7 +146,7 @@ body {
 
 @media screen and (max-width:768px) {
     body {
-        background-color: red;
+
     }
     .navbar {
         width: 100%;
@@ -197,8 +197,9 @@ body {
         padding: 2px 2px;
     }
     .right-a {
-        font-size: 0.6rem;
+        font-size: 0.7rem;
         color: white;
+        padding:0px 5px;
     }
     ::placeholder {
         font-size: 0.7rem;
