--- a/style.css
+++ b/style.css
@@ -146,7 +146,7 @@ body {
 
 @media screen and (max-width:768px) {
     body {
-
+        background-color: white;
     }
     .navbar {
         width: 100%;
@@ -199,7 +199,7 @@ body {
     .right-a {
         font-size: 0.7rem;
         color: white;
-        padding:0px 5px;
+        padding:2px 5px;
     }
     ::placeholder {
         font-size: 0.7rem;
