--- a/navbar/navbar.css
+++ b/navbar/navbar.css
@@ -100,8 +100,8 @@
 .nav-search-button {
     border: none;
     border-radius: none;
-    color: white;
     background-color: #ff2654;
+    background-size: 18px;
     cursor: pointer;
     height: 35px;
     width: 65px;
@@ -112,6 +112,9 @@
     align-items: center;
     justify-content: center;
     transition: 0.7s;
+    background-image:url(icon/search.svg);
+    background-repeat: no-repeat;
+    background-position: center;
 }
 
 .nav-right {
@@ -208,12 +211,18 @@
     }
     ::placeholder {
         font-size: 0.7rem;
+        font-family: Kanit;
     }
 }
 
 .nav-search-button:hover {
-    background-color: blueviolet;
-    transition: 0.7s;
+    background-color: white;
+    transition: 0.3s;
+    background-image:url(icon/search-hover.svg);
+    background-repeat: no-repeat;
+    background-position: center;
+    box-sizing: border-box;
+    border: 1px solid #ff114e;
 }
 
 .right-a:hover {
